<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">易喵</string>
    <string name="phone_format_error">账号或密码错误</string>
    <string name="account_error">账号格式错误</string>
    <string name="password_format_error">密码为8-16位数字和字母组合</string>
    <string name="repassword_format_error">确认密码格式不正确</string>
    <string name="two_password_not_same">两次输入密码不一致</string>
    <string name="vfcode_format_error">验证码为6位数字</string>
    <string name="home">首页</string>
    <string name="order">订单</string>
    <string name="message">消息</string>
    <string name="login">登录</string>
    <string name="mine">我的</string>
    <string name="about_us">关于App</string>
    <string name="logout">退出登录</string>
    <string name="my_message">我的消息</string>
    <string name="set_dv">环境配置</string>
    <string name="alreay_newest_version">当前已经是最新版本</string>
    <string name="cart">购物车</string>
    <string name="account_relative">账户关联</string>
    <string name="modify_password">修改密码</string>
    <string name="receive_address">收货地址</string>
    <string name="area_select_json_name">area_phone_code.json</string>
    <string name="area_select_title">选择国家或地区</string>
    <string name="common_country_1">中国大陆</string>
    <string name="common_country_2">中国香港</string>
    <string name="common_country_list">常用</string>
    <string name="my_info_account">账户名</string>
    <string name="my_info_change_phone">更改手机号</string>
    <string name="my_info_change_email">更改邮箱</string>
    <string name="my_info_personal_information">个人信息</string>
    <string name="my_info_current_phone">当前绑定的手机号</string>
    <string name="my_info_current_phone_change">如需更改,请选择验证方式</string>
    <string name="my_info_bind_phone">你正在绑定新的手机号</string>
    <string name="my_info_pls_input_phone">请输入手机号</string>
    <string name="my_info_pls_input_confirm_code">请输入验证码</string>
    <string name="my_info_pull_confirm_code">获取验证码</string>
    <string name="my_info_push_confirm">提交</string>
    <string name="my_info_allow_change_phone">你可以更改手机号</string>
    <string name="my_info_allow_phone_content">点击“获取验证码”,我们将发送到您绑定的手机上请确认123456是您的手机</string>
    <string name="my_info_next_step">下一步</string>
    <string name="modify_password_title_1">如需修改,请选择修改方式</string>
    <string name="modify_password_pass_phone">通过手机修改</string>
    <string name="modify_password_pass_email">通过邮箱修改</string>
    <string name="modify_password_pass">通过</string>
    <string name="modify_password_now">您正在修改密码</string>
    <string name="modify_password_now_title">点击“获取验证码”,我们将发送到您绑定的手机上请确认</string>
    <string name="modify_password_now_title_2">是您的手机</string>
    <string name="modify_password_now_email_title">点击“获取新密码”，我们将发送到您绑定的邮箱，请确认</string>
    <string name="modify_password_now_email_title_2">是您的邮箱</string>
    <string name="modify_password_input_paw">请设置新密码,8-16位数字和字母组合</string>
    <string name="modify_password_push">确认</string>
    <string name="add_address">+ 新增地址</string>
    <string name="add_address_name">张三 1321234567890</string>
    <string name="add_address_location">香港 湾仔区 皇后大道 皇后大厦D栋18楼1210</string>
    <string name="add_address_normal">默认</string>
    <string name="receiver_name">收货人</string>
    <string name="phone_num">手机号码</string>
    <string name="area_name">所属地区</string>
    <string name="detailed_address">详细地址</string>
    <string name="set_address_normal">设置默认地址</string>
    <string name="confirm_and_use">确认并使用</string>
    <string name="version_app">Version 1.0.1</string>
    <string name="product_detail">产品介绍</string>
    <string name="version_update">检查更新</string>
    <string name="about_app">关于APP</string>
    <string name="association_name_1">Facebook</string>
    <string name="association_name_2">Twitter</string>
    <string name="association_name_3">新浪微博</string>
    <string name="association_name_1_ok">扎克伯格</string>
    <string name="association_name_2_ok">未绑定</string>
    <string name="account_association">账号关联</string>
    <string name="login_out_success">退出登录成功</string>
    <string name="update_dialog">更新</string>
    <string name="prompt_title">提示</string>
    <string name="clean_cache_pls">是否清除全部缓存?</string>
    <string name="clean_cache_success">清除缓存成功</string>
    <string name="pls_permission_storage">请求存储卡读写权限</string>
    <string name="pls_permission_open_camera">请求打开相机等权限</string>
    <string name="bind_telephone_num">绑定新手机号</string>
    <string name="bind_new_email">绑定新邮箱</string>
    <string name="confirm_style">验证方式</string>
    <string name="change_phone_num">您可以更改手机号</string>
    <string name="bind_new_phone_num">您正在绑定新的手机号</string>
    <string name="current_bind_email">当前绑定的邮箱</string>
    <string name="change_you_email">您可以更改邮箱</string>
    <string name="now_bind_new_email">您正在绑定新的邮箱</string>
    <string name="choose_address">选择地址</string>
    <string name="add_address_list">新增地址</string>
    <string name="change_address_list">修改地址</string>
    <string name="delete_dialog_info">确定删除这个地址？</string>
    <string name="delete_dialog_cancel">取消</string>
    <string name="delete_dialog_delete">删除</string>
    <string name="pls_login">请登录</string>
    <string name="pls_input_order_name">请输入收货人</string>
    <string name="pls_input_phone_num">请输入手机号码</string>
    <string name="pls_select_area">请选择所在区域</string>
    <string name="pls_input_detail_address">请输入详细地址</string>
    <string name="pls_input_email_address">请输入邮箱地址</string>
    <string name="confirm_style_phone">验证手机号</string>
    <string name="confirm_style_email">验证邮箱</string>
    <string name="email_format_error">账号或密码错误</string>
    <string name="unbind_association">确认解绑账号么？</string>
    <string name="language_change">语言切换</string>
    <string name="language_chinese_fan">繁體中文</string>
    <string name="language_chinese_simple">简单中文</string>
    <string name="language_english">English</string>
    <string name="pop_HK_area">地区</string>
    <string name="order_list_title_1">全部</string>
    <string name="order_list_title_2">待支付</string>
    <string name="order_list_title_3">待收货</string>
    <string name="order_list_title_4">已完成</string>
    <string name="order_list_title_5">已取消</string>
    <string name="scan_code_order_list">订单列表</string>
    <string name="scan_code_order_list_detail">订单详情</string>
    <string name="bind_phone_num">更改手机号</string>
    <string name="bind_email_num">更改邮箱</string>
    <string name="unbind_account">尚未绑定手机号</string>
    <string name="unbind_email">尚未绑定邮箱</string>
    <string name="scan_code_shop_count_start">共</string>
    <string name="scan_code_shop_count_end">件商品</string>
    <string name="order_self_pickup">自提</string>
    <string name="order_delivery">配送</string>
    <string name="order_item_btn_del">删除订单</string>
    <string name="order_item_btn_add">再来一单</string>
    <string name="order_item_renew_add">重新购买</string>
    <string name="order_item_view_picking_code">查看提货码</string>
    <string name="order_item_cancel">取消订单</string>
    <string name="order_item_pay">去支付</string>
    <string name="order_detail_list">请在</string>
    <string name="order_detail_list_end">內完成支付,过时订单将会取消</string>
    <string name="pay_style_1">现金</string>
    <string name="pay_style_2">支付宝</string>
    <string name="pay_style_3">paypal</string>
    <string name="pay_style_4">微信</string>
    <string name="pay_style_5">信用卡</string>
    <string name="pay_style_6">银行卡</string>
    <string name="order_pick_up_code">提货码</string>
    <string name="order_transaction_complete">交易成功</string>
    <string name="order_self_goto_pickup">上门自提</string>
    <string name="order_goto_delivery">商家配送</string>
    <string name="order_del_dialog">确定删除订单么？</string>
    <string name="order_cancel_dialog">确定取消订单么？</string>
    <string name="pls_input_password_again">请再次输入新密码</string>
    <string name="submitText_ok">完成</string>
    <string name="piece_num">件</string>
    <string name="order_empty_title">订单空空如也,赶紧开启您的第一次吧!</string>
    <string name="code_send_success">验证码已发送</string>
    <string name="pls_set_new_password">设置新密码</string>
    <string name="new_password_set_success">新密码设置成功</string>
    <string name="pls_login_system">立即登录</string>
    <string name="login_check_order">登录查看订单</string>
    <string name="login_check_cart">登录查看购物车</string>
    <string name="popup_service_terms">在您注册成为易喵用户的过程中，您需要完成我们的注册流程并通过点击同意的形式在线签署以下协议，请您务必仔细阅读，充分理解协议中的条款内容后再点击同意（尤其是以粗体标识的条款，因为这些条款可能会明确您应履行的义务或对您的权利有所限制）：</string>
    <string name="popup_service_terms_title_0">《用户注册协议》</string>
    <string name="popup_service_terms_title_1">《用户注册协议》</string>
    <string name="popup_service_terms_title_1_5"></string>
    <string name="popup_service_terms_title_2">《服务条款》</string>
    <string name="popup_service_terms_title_3">《隐私政策》</string>
    <string name="popup_service_terms_2">【请您注意】如果您不同意上述协议或其中任何条款约定，请您停止注册。您停止注册后将仅可以浏览我们的商品信息但无法享受我们的产品或服务。如您按照注册流程提示填写信息，阅读并点击同意上述协议且完成全部注册流程后，即表示您已充分阅读理解并接受协议的全部内容；并表明您也同意易喵可以依据以上的隐私政策内容来处理您的个人信息。如您对以上协议内容有任何疑问，您可随时与易喵客服联系。</string>
    <string name="popup_service_bottom_title">点击同意即表示您已阅读并同意</string>
    <string name="popup_not_agree">不同意</string>
    <string name="popup_agree">同意</string>
    <string name="user_agreement">用户注册协议</string>
    <string name="terms_of_service">服务条款</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="logout_btn_bottom">退出登录</string>
    <string name="phone_not_register_1" tools:ignore="ExtraTranslation">手机号</string>
    <string name="email_not_register_1">邮箱</string>
    <string name="phone_not_register_2">未注册，请注册</string>
    <string name="phone_not_register_confirm">去注册</string>
    <string name="phone_ready_register_1" tools:ignore="ExtraTranslation">已注册，请直接登录</string>
    <string name="phone_ready_register_confirm">去登录</string>
    <string name="click_login_agree">点击登录即代表您已同意</string>
    <string name="server_select">《服务条款》</string>
    <string name="privacy_policy_login">《隐私政策》</string>
    <string name="login_and">和</string>
    <string name="register_success">注册成功</string>
    <string name="modify_success">修改成功</string>
    <string name="product_description_content">易喵作为香港电商聚合平台，使用用途主要以香港实体店为基础的线上销售平台；使用人群以香港C端用户为主，辐射中国大陆及其他海外国家和地区。</string>
    <string name="user_cancel_order">用户取消订单</string>
    <string name="time_out_to_pay">超时未支付</string>
    <string name="goods_detail">商品详情</string>
    <string name="version_name">版本</string>
    <string name="order_send_address_1">自提地址</string>
    <string name="order_send_address_2">配送地址</string>
    <string name="register_password">请输入8-16位数字和字母组合</string>
    <string name="register_password_again">请再次输入以便确认密码无误</string>
    <string name="service_phone">客服电话</string>
    <string name="shop_phone_address">门店电话</string>
    <string name="shop_phone_address_title">门店地址</string>
    <string name="pickup_phone_name">收货人</string>
    <string name="pickup_address">收货地址</string>
    <string name="have_new_version">已有新版本</string>
    <string name="update_title">检查更新</string>
    <string name="update_main_content">主要内容</string>
    <string name="bind_account_success">绑定成功</string>
    <string name="unbind_account_success">解绑成功</string>
    <string name="bind_account_phone">绑定手机</string>
    <string name="bind_account_email">绑定邮箱</string>
    <string name="bind_success_tips">绑定后，下次您可以采用手机号和密码直接登录</string>
    <string name="pls_input_email">请输入邮箱</string>
    <string name="settlement">结算</string>
    <string name="confirm">确定</string>
    <string name="total">合计:</string>
    <string name="version_match">版本:</string>
    <string name="patch_size">包大小:</string>
    <string name="update_time">更新时间:</string>
    <string name="download_progress">下载进度:</string>
    <string name="release_notes">更新说明:</string>
    <string name="start">开始</string>
    <string name="gouda_map">高德地图</string>
    <string name="baidu_map">百度地图</string>
    <string name="select_0">已选(0)</string>
    <string name="fruit">水果</string>
    <string name="dead_goods">失效商品</string>
    <string name="register_and_privacy_policy">注册协议及隐私政策</string>
</resources>