<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/service_popup_bg_raduis"
    android:orientation="vertical">

    <TextView
        android:id="@+id/serviceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_and_privacy_policy"
        android:gravity="center"
        android:layout_marginTop="18dp"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:textColor="@color/mainTextColor"/>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_above="@+id/llBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/serviceTitle">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
            <me.grantland.widget.AutofitTextView
                android:id="@+id/textStart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/popup_service_terms"
                android:textSize="13sp"
                android:textColor="@color/secondaryTextColor"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="13sp"
                android:textColor="@color/secondaryTextColor"
                android:text="@string/popup_service_terms_title_0"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="13sp"
                android:textColor="@color/secondaryTextColor"
                android:text="@string/popup_service_terms_title_2"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="13sp"
                android:textColor="@color/secondaryTextColor"
                android:text="@string/popup_service_terms_title_3"
                />
            <me.grantland.widget.AutofitTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/popup_service_terms_2"
                android:textSize="13sp"
                android:textColor="@color/secondaryTextColor"/>
            </LinearLayout>
        </ScrollView>

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:paddingTop="6dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:textColor="@color/secondaryTextColor"
                android:text="@string/popup_service_bottom_title"/>
                <TextView
                    android:id="@+id/registrationAgreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:textColor="@color/mainColor"
                    android:text="@string/popup_service_terms_title_1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/registrationAgreement2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:textColor="@color/mainColor"
                android:text="@string/popup_service_terms_title_1_5"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/termsOfService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:textColor="@color/mainColor"
                    android:text="@string/popup_service_terms_title_2"/>
               <!-- <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:textColor="@color/secondaryTextColor"
                    android:text="@string/popup_service_bottom_and"/>-->
                <TextView
                    android:id="@+id/privacyPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:textColor="@color/mainColor"
                    android:text="@string/popup_service_terms_title_3"/>
            </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_marginTop="12dp"
            android:gravity="center">
            <TextView
                android:id="@+id/btnNotAgree"
                android:layout_width="109dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:textColor="@color/secondaryTextColor"
                android:textSize="16sp"
                android:text="@string/popup_not_agree"
                android:background="@drawable/shape_bg_btn_not_agree"
                />
            <TextView
                android:id="@+id/btnAgree"
                android:layout_marginLeft="20dp"
                android:layout_width="109dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/popup_agree"
                android:background="@drawable/selector_bg_btn_service"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>