<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bottomColor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="24dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/shape_register_radius6_bg">

            <TextView
                android:drawablePadding="5dp"
                android:id="@+id/tvAreaCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableEnd="@mipmap/icon_phone_pull"
                android:padding="10dp"
                android:text="+86"
                android:textColor="@color/mainTextColor"
                android:textSize="@dimen/contentTextSize" />

            <com.epro.mall.ui.view.ClearableEditText
                android:id="@+id/etPhone"
                style="@style/MyEditText"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/tvAreaCode"
                android:hint="@string/pls_input_phone_num"
                android:textColorHint="#CCCCCC"
                android:textColor="@color/mainTextColor"
                android:maxLength="20" />
        </RelativeLayout>

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/shape_register_radius6_bg">
            <com.epro.mall.ui.view.ClearableEditText
                android:id="@+id/etPhoneVfcode"
                style="@style/MyEditText"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/my_info_pls_input_confirm_code"
                android:textColorHint="#CCCCCC"
                android:textColor="@color/mainTextColor"
                android:inputType="number"
                android:maxLength="6" />
            <View
                android:layout_width="0.5dp"
                android:layout_height="16dp"
                android:background="#CCCCCC"
                />
            <com.epro.mall.ui.view.CountDownButton
                app:enableTextColor="@color/mainColor"
                app:disableTextColor="#CCCCCC"
                android:textSize="@dimen/secondaryContentTextSize"
                android:background="@null"
                android:id="@+id/btnPhoneGetCode"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/my_info_pull_confirm_code" />
        </LinearLayout>
        <RelativeLayout
            android:layout_marginTop="22dp"
            android:background="@drawable/shape_register_radius6_bg"
            android:layout_width="match_parent"
            android:layout_height="44dp">
            <com.epro.mall.ui.view.ClearableEditText
                style="@style/MyPasswordEditText"
                android:id="@+id/etPhonePassword"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/cbPhoneEyes"
                android:textColorHint="#CCCCCC"
                android:textColor="@color/mainTextColor"
                android:hint="@string/register_password" />
            <CheckBox
                android:layout_marginEnd="7dp"
                android:id="@+id/cbPhoneEyes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:button="@null"
                android:drawableStart="@drawable/selector_check_password"
                android:padding="8dp" />
        </RelativeLayout>
        <TextView
            android:id="@+id/bindTips"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:text="@string/bind_success_tips"
            android:textSize="@dimen/text_size_11"
            android:textColor="@color/thirdTextColor"
            />
        <Button
            android:layout_marginBottom="15dp"
            style="@style/MyButton"
            android:layout_width="200dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:id="@+id/btnConfirm"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_bg_push_btn"
            android:text="@string/confirm"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>
